--- a/c/Makefile
+++ b/c/Makefile
@@ -1,11 +1,17 @@
 out_name = utils.out
-std = c99
+compiler = g++
+std = c++11
+source = utils.cpp
+test_source = test/utils_test.cpp
 
 all:
-	gcc utils.c -o ${out_name} --std=${std}
+	# run test
+	${compiler} ${source} ${test_source} -o ${out_name} --std=${std}
+	echo "compile --- fin\n"
+	./${out_name}
 
 prod:
-	gcc utils.c -o ${out_name} --std=${std} -Os
+	${compiler} ${source} -o ${out_name} --std=${std} -Os
 
 clear:
 	rm ${out_name}
